use valueOf instead of the deprecated constructor for Integer