@@ -270,11 +270,11 @@ public class Segmentation extends AbstractParser {
                                 if (pattern.length() > 8) {
                                     Integer nb = patterns.get(pattern);
                                     if (nb == null) {
-                                        patterns.put(pattern, new Integer(1));
+                                        patterns.put(pattern, Integer.valueOf(1));
                                         firstTimePattern.put(pattern, false);
                                     }
                                     else
-                                        patterns.put(pattern, new Integer(nb+1));
+                                        patterns.put(pattern, Integer.valueOf(nb+1));
                                 }
                             }
                         }
